rendered/envs/alpha/vmks/ingressroute-vmselect-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmselect-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`vmselect.ts.zebradil.dev`) || Host(`vmselect.junior.ts.zebradil.dev`)
      services:
        - name: vmselect-vmks-long
          port: http
